# bai_sim2real

./: .gitignore  CMakeLists.txt  README.md
src/: hw_ctr.py  hw_ctrl.py  mot_bridge_test.py  onnx_test.py
src/exlcm/: __init__.py  imu_cmd.hpp  imu_cmd.py  mot_cmd.hpp  mot_cmd.py  mot_state.hpp  mot_state.py
src/imu_bridge/: imu_bridge.cpp  imu_bridge_rt.cpp  vofa_reader.cpp  vofa_reader.hpp  vofa_reader_sg.cpp  vofa_reader_sg.hpp
src/lcm_t/: imu_cmd.lcm  mot_cmd.lcm  mot_state.lcm  twist_cmd.lcm
src/mot_bridge/: CANInterface.cpp  MotorDriver.cpp  MotorDriverTest.cpp  bringup_usb2can.sh  motor_group.cpp  motor_group_rt.cpp  motor_group_test.cpp  set_usb2can_rules.sh
src/mot_bridge/motor_driver/: CANInterface.hpp  MotorDriver.hpp  motor_group.hpp
src/onnx/: bai_policy_0523_h2.onnx  bai_v2_policy.onnx
src/utils/: rt_loop.hpp
src/xmls/: bai_v2.xml
src/xmls/meshes/: hip2hip_r.stl  leg_low_l.stl  leg_low_r.stl
